# aether

./: .gitignore  CHANGELOG.md  README.md  patch_generate.py  patch_tests.py  pyproject.toml  test_ollama_agent.py  test_ollama_dynamic_tools.py  test_ollama_skill_architecture.py
.vexp/: manifest.json
docs/: 01-Constitution.md  02-Product-Requirements.md  03-Architecture.md  04-Agent-System.md  05-SDK.md  06-Skills-System.md  07-Tools-System.md  08-Memory-System.md  09-Event-Bus.md  10-Roadmap.md  11-Naming.md  12-Decision-Log.md  13-Development-Guide.md  14-Core-Structure.md  15-Execution-Engine.md  16-Execution-Plan.md  README.md  ollama-provider-debug-review.md  v0.10.0-architecture-review.md  v0.10.0-implementation-plan.md  v0.10.0-post-release-review.md  v0.11.0-architecture-review.md  v0.11.0-implementation-plan.md  v0.11.0-post-release-review.md  v0.12.0-architecture-review.md  v0.12.0-implementation-plan.md  v0.13.0-architecture-review.md  v0.13.0-implementation-plan.md  v0.13.0-post-release-review.md  v0.14.0-architecture-review.md  v0.14.0-implementation-plan.md  v0.14.0-post-release-review.md  v0.15.0-architecture-review.md  v0.15.0-implementation-plan.md  v0.15.0-post-release-review.md  v0.15.1-post-release-review.md  v0.15.1-validation-audit.md  v0.16.0-architecture-review.md  v0.16.0-implementation-review.md  v0.17.0-architecture-review.md  (+10 more)
tests/: test_agent.py  test_agent_delegation.py  test_agent_loop.py  test_capabilities.py  test_coordination.py  test_datetime_consistency.py  test_engine.py  test_execution_pipeline.py  test_memory.py  test_parallel.py  (+14 more)
(+60 files in other folders)
