[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "aether-core"
version = "0.1.0"
description = "The core engine for Aether AI agents platform"
requires-python = ">=3.11"


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
pythonpath = [
    "src"
]